--- a/src/App.scss
+++ b/src/App.scss
@@ -19,4 +19,16 @@ body {
   background: #000000;
   display: flex;
   flex-direction: column;
+}
+
+@keyframes gradientMove {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 } 
