--- a/src/components/FloatingButtons/FloatingButtons.scss
+++ b/src/components/FloatingButtons/FloatingButtons.scss
@@ -28,10 +28,10 @@
   }
 
   .whatsapp-button {
-    background-color: #25D366;
+    background-color: #DC2626;
 
     &:hover {
-      background-color: #128C7E;
+      background-color: #B91C1C;
       transform: translateY(-2px);
     }
   }
