--- a/src/components/LoadingScreen/LoadingScreen.scss
+++ b/src/components/LoadingScreen/LoadingScreen.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -55,7 +55,6 @@
   height: auto;
   object-fit: contain;
   animation: fadeIn 1s ease-in-out;
-  filter: brightness(0) invert(1);
   transition: transform 0.3s ease-in-out;
 
   &:hover {
