--- a/src/components/FAQ/FAQ.scss
+++ b/src/components/FAQ/FAQ.scss
@@ -2,6 +2,7 @@
   position: relative;
   padding: 3rem 1rem;
   overflow: hidden;
+  background: #000 !important;
 
   @media (min-width: 768px) {
     padding: 5rem 1rem;
